// Copyright (c) 2018 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package mainchainpb;

message SubChain {
    uint32 chainID = 1;
    string securityDeposit = 2;
    string operationDeposit = 3;
    uint64 startHeight = 4;
    uint64 stopHeight = 5;
    uint64 parentHeightOffset = 6;
    bytes ownerPublicKey = 7;
    uint64 currentHeight = 8;
    uint64 depositCount = 9;
}

message MerkleRoot {
    string name = 1;
    bytes value = 2;
}

message BlockProof {
    string subChainAddress = 1;
    uint64 height = 2;
    repeated MerkleRoot roots = 3;
    bytes producerPublicKey = 4;
    string producerAddress = 5;
}

message InOperation {
    uint32 id = 1;
    bytes Address = 2;
}

message SubChainsInOperation {
    repeated InOperation inOp = 1;
}

message Deposit {
    string amount = 1;
    bytes address = 2;
    bool confirmed = 3;
}
